# PixelDrift

./: .gitignore  CMakeLists.txt  README.md  direksiyon.txt  main.cpp
src/core/: Config.h  Coord.h  Utils.h
src/input/: Input.cpp  Input.h
src/physics/: CarPhysics.cpp  CarPhysics.h
src/resource/: ResourceManager.h
src/world/: Track.cpp  Track.h
